Bug 273238 - Clicking links for some filetypes open "Open with" dialog
Summary: Clicking links for some filetypes open "Open with" dialog
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-14 01:20 UTC by mkkot
Modified: 2011-06-17 17:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mkkot 2011-05-14 01:20:44 UTC
Version:           4.6 (using Devel) 
OS:                Linux

Today I got a http link for a bmp image via psi (jabber). Clicked and kde showed a dialog asking me what kind of app it should use to open the file. In my opinion kde should have just opened the image with default viewer. File association dialog states that image/bmp is opened in gwenview (works when opening bmp images within dolphin).

Then I tried the same thing with native kde app -- konversation. When clicked on the link, a konqueror window has been opened asking if the image should be Opened  with... or Saved as... When selected Open with, the same dialog appears as with psi. Expected behaviour: just show the picture in gwenview.


Reproducible: Always

Steps to Reproduce:
1. open some communicator (psi and konversation have been tested against this)
2. copy/paste a link like http://i1.kwejk.pl/site_media/obrazki/85989-pani-z-dziekanatu.bmp
3. click on it

Actual Results:  
"Open with" dialog appears

Expected Results:  
Image should be opened instantly in gwenview as it is configured in file association
Comment 1 mkkot 2011-05-14 01:26:38 UTC
Darn, it does the same when I click on this link viewing this bug page with konqueror! Shows Open with... or Save as... dialog. Just tried to adjust file association setting but it doesn't react on my modifications at all.

BTW I use KDE 4.6.3, there was only 4.6.2 vesion in bug filling form.

I guess this problem occurs not only with bmp files.
Comment 2 Dawit Alemayehu 2011-06-04 03:38:28 UTC
(In reply to comment #1)
> Darn, it does the same when I click on this link viewing this bug page with
> konqueror! Shows Open with... or Save as... dialog. Just tried to adjust file
> association setting but it doesn't react on my modifications at all.
> 
> BTW I use KDE 4.6.3, there was only 4.6.2 vesion in bug filling form.
> 
> I guess this problem occurs not only with bmp files.

This is not a KDE bug. The server returns "image/x-ms-bmp" as a content type. There is no such mime-type. BMP files are supposed to have a mime-type of "image/bmp".
Comment 3 Dawit Alemayehu 2011-06-17 04:59:14 UTC
Git commit a06f767ed7ba28e2e45b5281f40dbb91ae0406ea by Dawit Alemayehu.
Committed on 17/06/2011 at 04:52.
Pushed by adawit into branch 'KDE/4.6'.

Workaround yet another broken server implementation that sends image/x-bmp
instead of image/bmp for BMP images.

BUG: 273238
FIXED-IN: 4.6.5

M  +2    -0    kioslave/http/http.cpp     

http://commits.kde.org/kdelibs/a06f767ed7ba28e2e45b5281f40dbb91ae0406ea
Comment 4 Dawit Alemayehu 2011-06-17 05:00:05 UTC
Git commit b58d92b29d6ccfb76151d22c463fb906cbd405a4 by Dawit Alemayehu.
Committed on 17/06/2011 at 04:52.
Pushed by adawit into branch 'master'.

Workaround yet another broken server implementation that sends image/x-bmp
instead of image/bmp for BMP images.

BUG: 273238
FIXED-IN: 4.6.5

(cherry picked from commit a06f767ed7ba28e2e45b5281f40dbb91ae0406ea)

M  +2    -0    kioslave/http/http.cpp     

http://commits.kde.org/kdelibs/b58d92b29d6ccfb76151d22c463fb906cbd405a4
Comment 5 Allan Sandfeld 2011-06-17 16:52:49 UTC
image/x-ms-bmp is an alias for image/bmp in the mime-type database, this means they should act the same, and the correction could be made automatically.
Comment 6 Allan Sandfeld 2011-06-17 17:08:40 UTC
I have reported this as a bug to the shared mime-info package at freedesktop, see: https://bugs.freedesktop.org/show_bug.cgi?id=38415