Workaround yet another broken server implementation that sends image/x-bmp instead of image/bmp for BMP images.

BUG: 273238
FIXED-IN: 4.6.5

(cherry picked from commit a06f767ed7ba28e2e45b5281f40dbb91ae0406ea)